--- a/index.html
+++ b/index.html
@@ -33,11 +33,30 @@
         <div>
             <img src="img/tim-1.jpg" alt="tim">
             <img src="img/tim-2.jpg" alt="tim">
-            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</></p>
-            <p>2nd Photo: Wikimedia, by Paule Clarke</p>
+            <p class="small">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</></p>
+            <p class="small">2nd Photo: Wikimedia, by Paule Clarke</p>
         </div>
         <!-- /foto -->
 
+        <!-- descrizione -->
+        <div class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, saepe. Recusandae libero, eum praesentium sit laudantium quod non eius excepturi officiis in a culpa ipsa repellendus? Quaerat, quisquam? Est, totam. <span class="yellow"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </span> Harum beatae fugit deleniti amet adipisci quo dignissimos tempora facilis animi fugiat, ullam perferendis reiciendis repellat odit voluptate, at recusandae, quam modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti totam dicta et, rerum excepturi earum impedit hic velit iure odio corporis sint natus. Excepturi qui architecto commodi dolorem maxime suscipit?
+        </div>
+        <!-- /descrizione -->
+
+        <!-- elenco  -->
+        <div class="description">
+            <li>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex quisquam obcaecati, debitis ipsam voluptatibus corrupti deleniti repellendus esse, fuga, assumenda error. Quasi, exercitationem itaque. Est molestias repellendus quo non numquam!
+            </li>
+            <li>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsum culpa mollitia ipsam, inventore, eius corrupti nobis, saepe soluta ea hic! Saepe debitis consequatur dolor provident natus labore vero minus?
+            </li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quidem quasi ea tempore quibusdam mollitia, animi, aliquam alias enim nemo pariatur eum impedit beatae, dignissimos quo ab asperiores. Repudiandae, iusto!    
+            </li>
+        </div>
+        <!-- /elenco -->
+        
     </main>
 
 </body>
