--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <!--manifesto-->
         <div>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <p id="first-p">  Scritto da <span id="blue-write">The Boolenear</span>  </p>
-            <p id="second-p">il 10/10/2020</p>
+            <p id="autor">  Scritto da <span id="blue-write">The Boolenear</span>  </p>
+            <p id="date">il 10/10/2020</p>
         </div>
         <!-- /manifesto -->
 
@@ -56,7 +56,45 @@
             </li>
         </div>
         <!-- /elenco -->
+
+        <!-- table -->
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>lorem isquiri lorem</th>
+                        <th>lorem lala quert</th>
+                        <th>lorem lorem isquemm</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="blue-line">Lorem isquiri dolor</td>
+                        <td class="blue-line">Lorem isquiri dolor</td>
+                        <td class="blue-line">Lorem isquiri dolor</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem isquiri dolor</td>
+                        <td>Lorem isquiri dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore iusto odit ducimus earum enim voluptatibus quae cum, iste architecto nobis dignissimos id! Nisi laborum illum est odio quia quisquam natus!</td>
+                    </tr>
+                    <tr>
+                        <td class="blue-line">Lorem isquiri dolor</td>
+                        <td class="blue-line">Lorem isquiri dolor</td>
+                        <td class="blue-line">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore iusto odit ducimus earum enim voluptatibus quae cum, iste architecto nobis dignissimos id! Nisi laborum illum est odio quia quisquam natus!</td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+            <!-- /table -->
+
+            <!-- final -->
+            <div class="description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora consequuntur perspiciatis velit, consequatur officia reiciendis, vel sequi dolor eum ratione, <span class="yellow"> molestias veritatis tempore esse? Veritatis </span> unde dolorem officia amet est.
+            </div>
         
+
+
     </main>
 
 </body>
