--- a/index.html
+++ b/index.html
@@ -92,7 +92,28 @@
             <div class="description">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora consequuntur perspiciatis velit, consequatur officia reiciendis, vel sequi dolor eum ratione, <span class="yellow"> molestias veritatis tempore esse? Veritatis </span> unde dolorem officia amet est.
             </div>
-        
+            <!-- /final -->
+            </main>
+
+            <!-- footer -->
+            <footer>
+                <br>
+                <div>
+                    <h3>
+                        Potrebbero interessarti
+                    </h3>
+                    <div>
+                        <img src="img/graph.jpg">
+                        <div class="top-text"> Lorem ipsum edrdfs
+                        </div>
+                    <!-- <br> </br> -->
+                    <img src="img/monitor.jpg" alt="monitor">
+                    </div>
+                </div>
+
+            </footer>
+
+
 
 
     </main>
