--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
 
         <!-- elenco  -->
         <div class="description">
-            <li>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex quisquam obcaecati, debitis ipsam voluptatibus corrupti deleniti repellendus esse, fuga, assumenda error. Quasi, exercitationem itaque. Est molestias repellendus quo non numquam!
-            </li>
-            <li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsum culpa mollitia ipsam, inventore, eius corrupti nobis, saepe soluta ea hic! Saepe debitis consequatur dolor provident natus labore vero minus?
-            </li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quidem quasi ea tempore quibusdam mollitia, animi, aliquam alias enim nemo pariatur eum impedit beatae, dignissimos quo ab asperiores. Repudiandae, iusto!    
-            </li>
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex quisquam obcaecati, debitis ipsam voluptatibus corrupti deleniti repellendus esse, fuga, assumenda error. Quasi, exercitationem itaque. Est molestias repellendus quo non numquam!
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsum culpa mollitia ipsam, inventore, eius corrupti nobis, saepe soluta ea hic! Saepe debitis consequatur dolor provident natus labore vero minus?
+                </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quidem quasi ea tempore quibusdam mollitia, animi, aliquam alias enim nemo pariatur eum impedit beatae, dignissimos quo ab asperiores. Repudiandae, iusto!    
+                </li>
+            </ul>
         </div>
         <!-- /elenco -->
 
@@ -102,13 +104,8 @@
                     <h3>
                         Potrebbero interessarti
                     </h3>
-                    <div>
-                        <img src="img/graph.jpg">
-                        <div class="top-text"> Lorem ipsum edrdfs
-                        </div>
-                    <!-- <br> </br> -->
+                        <img src id ="img/graph.jpg" id class="graph">
                     <img src="img/monitor.jpg" alt="monitor">
-                    </div>
                 </div>
 
             </footer>
