--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                     <h3>
                         Potrebbero interessarti
                     </h3>
-                        <img src id ="img/graph.jpg" id class="graph">
-                    <img src="img/monitor.jpg" alt="monitor">
+                        <img src ="img/graph.jpg">
+                        <br>
+                        <img src="img/monitor.jpg" alt="monitor">   
                 </div>
 
             </footer>
