--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
     <!-- header -->
-
-    <header>
-        <img src="img/logo.svg" id="logo" alt="the booleaner">
-    </header>
+    <div>
+        <header>
+            <img src="img/logo.svg" id="logo" alt="the booleaner">
+        </header>
+    </div>
 
     <!-- /header -->
 
@@ -104,9 +105,18 @@
                     <h3>
                         Potrebbero interessarti
                     </h3>
+
+                    <div id="computer" class= "footer-item">
+                        Lorem fkdjfdf
+                    </div>
+                    <div id="graph" class ="footer-item">
+                        Lorem edrhfueihgrue
+                    </div>
+
+<!-- 
                         <img src ="img/graph.jpg">
                         <br>
-                        <img src="img/monitor.jpg" alt="monitor">   
+                        <img src="img/monitor.jpg" alt="monitor">    -->
                 </div>
 
             </footer>
